<resources>
    <string name="app_name">Todo</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="created">Created</string>
    <string name="done_on">Done on</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due date</string>
    <string name="due_time">Due time</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="attachment">Attachment</string>
    <string name="search">Search</string>
    <string name="default_notification_channel_name">todoChannel</string>
    <string name="notification_before">Notification time</string>
    <string name="hide_completed">Hide completed</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="category">Category</string>
    <string name="delete_category">Delete category</string>
</resources>